--- a/package.json
+++ b/package.json
@@ -4,34 +4,28 @@
   "description": "A videos scraper using frontendMasters android api",
   "main": "index.ts",
   "scripts": {
-    "start": "npm run serve",
     "dev": "ts-node-dev --files --respawn src/index.ts",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" \"npm run watch-ts\" \"npm run watch-node\"",
     "serve": "node build/index.js",
-    "watch-ts": "tsc -w",
-    "watch-node": "nodemon build/index.js",
     "build": "npm run build-ts && npm run tslint",
     "build-ts": "tsc",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "test": "./node_modules/jest/bin/jest.js --forceExit --coverage --verbose",
-    "watch-test": "./node_modules/jest/bin/jest.js --forceExit --coverage --verbose --watch"
+    "watch-test": "./node_modules/jest/bin/jest.js --forceExit --coverage --verbose --watch",
+    "debug": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn src/index.ts"
   },
   "dependencies": {
     "axios": "^0.21.0",
-    "js-file-download": "^0.4.12",
-    "ramda": "~0.26.1"
+    "cross-env": "^7.0.2",
+    "ramda": "~0.27.1"
   },
-  "author": "Th3CracKed, naj147",
+  "author": "Th3CracKed",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "~12.7.8",
-    "@types/ramda": "~0.26.26",
-    "concurrently": "~4.1.2",
-    "jest": "~24.9.0",
-    "nodemon": "~1.19.3",
-    "ts-node": "^9.0.0",
+    "@types/node": "~14.14.6",
+    "@types/ramda": "~0.27.32",
+    "jest": "~26.6.3",
     "ts-node-dev": "^1.0.0",
-    "tslint": "^5.20.0",
-    "typescript": "~3.6.3"
+    "tslint": "^5.20.1",
+    "typescript": "~4.0.5"
   }
 }
